--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.31.3",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/validator": "^13.7.14",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "prisma": "^4.11.0",
