--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@prisma/client": "4.11.0",
+    "@react-google-maps/api": "^2.18.1",
     "@types/node": "18.14.4",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -17,16 +19,20 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "jsonwebtoken": "^9.0.0",
+    "leaflet": "^1.9.3",
     "next": "13.2.3",
     "nookies": "^2.5.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "sharp": "^0.31.3",
     "typescript": "4.9.5",
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.52.2",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/leaflet": "^1.9.3",
     "@types/validator": "^13.7.14",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
