--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
@@ -18,6 +19,7 @@
     "crypto": "^1.0.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "jest-environment-jsdom": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
     "leaflet": "^1.9.3",
     "next": "13.2.3",
@@ -30,11 +32,15 @@
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/google.maps": "^3.52.2",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/leaflet": "^1.9.3",
     "@types/validator": "^13.7.14",
     "autoprefixer": "^10.4.13",
+    "jest": "^29.5.0",
+    "next-router-mock": "^0.9.2",
     "postcss": "^8.4.21",
     "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7"
