--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/Map/DynamicMap.js", "src/components/Map/Map.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/Map/DynamicMap.js", "src/components/Map/Map.js", "tests/unit.test.js"],
   "exclude": ["node_modules"]
 }
