--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.31.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/google.maps": "^3.52.2",
@@ -39,6 +40,7 @@
     "@types/leaflet": "^1.9.3",
     "@types/validator": "^13.7.14",
     "autoprefixer": "^10.4.13",
+    "cypress": "^12.8.1",
     "jest": "^29.5.0",
     "next-router-mock": "^0.9.2",
     "postcss": "^8.4.21",
